[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Enemies/CreepMeleeWeapon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemies/nomnom.wav" type="AudioStream" id=2]
[ext_resource path="res://_common/Materials/LightOnlyMaterial.tres" type="Material" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 60.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LowerJaw:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LowerJaw:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpperJaw:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpperJaw:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "bite"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LowerJaw:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 25, -10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LowerJaw:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpperJaw:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 33, 19 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpperJaw:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="CreepMeleeWeapon" type="Area2D"]
collision_layer = 256
collision_mask = 37
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 64, 0 )
shape = SubResource( 3 )

[node name="CockTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="ReloadTimer" type="Timer" parent="."]

[node name="LowerJaw" type="Sprite" parent="."]
visible = false
material = ExtResource( 3 )
scale = Vector2( 0.777734, 0.777734 )

[node name="Polygon2D" type="Polygon2D" parent="LowerJaw"]
use_parent_material = true
position = Vector2( 40, 36 )
polygon = PoolVector2Array( -3, 23, 20, 9, 23, -25, 5, 0, -6, -4 )

[node name="UpperJaw" type="Sprite" parent="."]
visible = false
material = ExtResource( 3 )
scale = Vector2( 0.776323, 0.776323 )

[node name="Polygon2D" type="Polygon2D" parent="UpperJaw"]
use_parent_material = true
position = Vector2( 38, -42.7292 )
scale = Vector2( 1, 0.770833 )
polygon = PoolVector2Array( -7, -34.0811, 10, -8.13513, 23, 43.7568, 4, 16.5135, -6, 32.0811 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/bite = SubResource( 5 )

[node name="DebugInfo" type="Node2D" parent="."]

[node name="StateLabel" type="Label" parent="DebugInfo"]
margin_left = -18.0
margin_top = -71.0
margin_right = 22.0
margin_bottom = -57.0

[node name="NomNomNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_CreepMeleeWeapon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CreepMeleeWeapon_body_exited"]
[connection signal="timeout" from="CockTimer" to="." method="_on_CockTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
